update company swag doc
